--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Shopping List</h2>
+    <ol>
+        <li data-ns-test="shoppingList">Item 1</li>
+        <li data-ns-test="shoppingList">Item 2</li>
+        <li data-ns-test="shoppingList">Item 3</li>
+    </ol>
+
+    <h2>Holiday Destinations</h2>
+    <ul>
+        <li data-ns-test="holidayList">Destination 1</li>
+        <li data-ns-test="holidayList">Destination 2</li>
+        <li data-ns-test="holidayList">Destination 3</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
